--- a/examples/notebooks/XLA_jax.ipynb
+++ b/examples/notebooks/XLA_jax.ipynb
@@ -3,6 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! export GIT_REPO=\"scitator/animus\" && git clone https://github.com/${GIT_REPO}\n",
+    "! export BRANCH=\"main\" && cd animus && git checkout -b $BRANCH origin/$BRANCH  && git pull origin $BRANCH\n",
+    "! pip install -r ./animus/requirements/requirements_jax_dl.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -12,8 +23,7 @@
    },
    "outputs": [],
    "source": [
-    "! pip install cloud-tpu-client==0.10 https://storage.googleapis.com/tpu-pytorch/wheels/torch_xla-1.9-cp37-cp37m-linux_x86_64.whl\n",
-    "! pip install torch==1.9.0+cu111 torchvision==0.10.0+cu111 -f https://download.pytorch.org/whl/cu111/torch_stable.html"
+    "! pip install \"jax[tpu]>=0.2.16\" -f https://storage.googleapis.com/jax-releases/libtpu_releases.html"
    ]
   },
   {
@@ -22,32 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! export GIT_REPO=\"scitator/animus\" && git clone https://github.com/${GIT_REPO}\n",
-    "! export BRANCH=\"main\" && cd animus && git checkout -b $BRANCH origin/$BRANCH  && git pull origin $BRANCH\n",
-    "! pip install -r ./animus/requirements/requirements_torch_dl.txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "GJnx7hpzEu70",
-    "outputId": "a34ae8b9-af98-44bf-9b5f-d4547bdcd28e"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.9.0+cu102\n"
-     ]
-    }
-   ],
-   "source": [
-    "from torch import __version__\n",
+    "from jax import __version__\n",
     "print(__version__)"
    ]
   },
@@ -64,7 +49,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! cd animus && OMP_NUM_THREADS=\"1\" MKL_NUM_THREADS=\"1\" PYTHONPATH=\".\" python examples/torch_dl/torch_run.py --engine=\"xla\""
+    "! cd animus && OMP_NUM_THREADS=\"1\" MKL_NUM_THREADS=\"1\" PYTHONPATH=\".\" python python examples/jax_dl/jax_run.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! cd animus && OMP_NUM_THREADS=\"1\" MKL_NUM_THREADS=\"1\" PYTHONPATH=\".\" python python examples/jax_dl/haiku_run.py"
    ]
   }
  ],
@@ -72,7 +66,7 @@
   "accelerator": "TPU",
   "colab": {
    "collapsed_sections": [],
-   "name": "Animus: Torch XLA",
+   "name": "Animus: Jax XLA",
    "provenance": []
   },
   "kernelspec": {
