--- a/examples/notebooks/colab_ci_cd.ipynb
+++ b/examples/notebooks/colab_ci_cd.ipynb
@@ -102,7 +102,7 @@
       },
       "outputs": [],
       "source": [
-        "! cd animus && OMP_NUM_THREADS=\"1\" MKL_NUM_THREADS=\"1\" bash bin/check_${REQUIREMENTS}.sh"
+        "! cd animus && OMP_NUM_THREADS=\"1\" MKL_NUM_THREADS=\"1\" PYTHONPATH=\".\" bash bin/check_${REQUIREMENTS}.sh"
       ]
     },
     {
@@ -137,7 +137,7 @@
     "accelerator": "GPU",
     "colab": {
       "collapsed_sections": [],
-      "name": "Catalyst: colab minimal CI/CD",
+      "name": "Animus: colab minimal CI/CD",
       "provenance": []
     },
     "kernelspec": {
