--- a/examples/notebooks/XLA_jax.ipynb
+++ b/examples/notebooks/XLA_jax.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! cd animus && OMP_NUM_THREADS=\"1\" MKL_NUM_THREADS=\"1\" PYTHONPATH=\".\" python python examples/jax_dl/jax_run.py"
+    "! cd animus && OMP_NUM_THREADS=\"1\" MKL_NUM_THREADS=\"1\" PYTHONPATH=\".\" python examples/jax_dl/jax_run.py"
    ]
   },
   {
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! cd animus && OMP_NUM_THREADS=\"1\" MKL_NUM_THREADS=\"1\" PYTHONPATH=\".\" python python examples/jax_dl/haiku_run.py"
+    "! cd animus && OMP_NUM_THREADS=\"1\" MKL_NUM_THREADS=\"1\" PYTHONPATH=\".\" python examples/jax_dl/haiku_run.py"
    ]
   }
  ],
