colab notebook fix

--- a/examples/notebooks/colab_ci_cd.ipynb
+++ b/examples/notebooks/colab_ci_cd.ipynb
@@ -102,7 +102,7 @@
       },
       "outputs": [],
       "source": [
-        "! cd animus && OMP_NUM_THREADS=\"1\" MKL_NUM_THREADS=\"1\" PYTHONPATH=\".\" bash bin/check_${REQUIREMENTS}.sh"
+        "! export REQUIREMENTS=\"jax_dl\" && cd animus && OMP_NUM_THREADS=\"1\" MKL_NUM_THREADS=\"1\" PYTHONPATH=\".\" bash bin/check_${REQUIREMENTS}.sh"
       ]
     },
     {
