jax+flax example; codestyle update (new black)

--- a/examples/notebooks/XLA_jax.ipynb
+++ b/examples/notebooks/XLA_jax.ipynb
@@ -58,6 +58,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "! cd animus && OMP_NUM_THREADS=\"1\" MKL_NUM_THREADS=\"1\" PYTHONPATH=\".\" python examples/jax_dl/flax_run.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "! cd animus && OMP_NUM_THREADS=\"1\" MKL_NUM_THREADS=\"1\" PYTHONPATH=\".\" python examples/jax_dl/haiku_run.py"
    ]
   }
